# pygui

./: .gitignore  README.md  pyproject.toml
scripts/: convert_hdf5_to_parquet.py
src/pygui/: __init__.py  app.py
src/pygui/analysis/: statistics.py
src/pygui/data/: loader.py  transformer.py
src/pygui/utils/: cuda.py
src/pygui/viz/: dashboard.py
tests/: test_cuda.py  test_loader.py  test_statistics.py  test_transformer.py
