[project]
name = "pygui"
version = "0.1.0"
description = "Interactive tool for analyzing and transforming high-frequency time series data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "panel>=1.4.0",
    "hvplot>=0.9.0",
    "holoviews>=1.18.0",
    "datashader>=0.16.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
gpu = [
    "cupy-cuda12x>=12.0.0",
    "cudf-cu12>=24.0.0",
]

[project.scripts]
pygui = "pygui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
